# devaipod

./: .containerignore  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Justfile  Makefile  README.md  deny.toml
.ci/: devaipod-test.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-container.yml  ci.yaml  ci.yml  docs.yml  release.yaml
contrib/: harvest-legacy-volumes.py
crates/host-shim/: Cargo.toml
crates/host-shim/src/: main.rs
crates/integration-tests/: Cargo.toml  clippy.toml
crates/integration-tests/src/: harness.rs  lib.rs  main.rs
crates/integration-tests/src/tests/: advisor.rs  cli.rs  container.rs  controlplane.rs  devcontainer.rs  mod.rs  orchestration.rs  pod_api.rs  ssh.rs  webui.rs  workspace_v2.rs
docs/: Dockerfile.mdbook  audit-agent-ui-rewriting.md  book.toml  pivot-devpod-multi.md
docs/src/: SUMMARY.md  acp.md  agent-isolation.md  agents.md  architecture.md  commands.md  configuration.md  container-mode.md  contributing.md  debugging.md  design.md  internals.md  intro.md  opencode.md  quickstart.md  related-projects.md  roadmap.md  sandboxing.md  secrets.md  service-gator.md
docs/todo/: acp-integration.md  advisor-v2.md  advisor.md  bot-assistant-accounts.md  controlplane-mcp-auth.md  controlplane.md  dynamic-port-forwarding.md  forgejo-integration.md  ideas.md  integration-web.md  kubernetes-support.md  kubernetes.md  lightweight-review.md  minimize-injection.md  openai-compat-proxy.md  opencode-web-enhancements.md  opencode-webui-fork.md  per-pod-gateway-sidecar.md  pod-api-driver.md  rootless-uidmapping.md  rust-sidecar-monitoring.md  subagent-container.md  test-performance.md  ui.md  webui.md  worker-orchestration-api.md  workspace-dev.md  workspace-v2.md
e2e-devaipod/: agent-spa.spec.ts  clipboard.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  pod-switcher.spec.ts
features/src/devaipod/: NOTES.md
opencode-ui/: .gitignore  package.json
patches/: opencode-devaipod.patch
scripts/: auth_proxy.py  devaipod-workerctl.py  pre-commit  test_auth_proxy.py  workspace_monitor.py
src/: acp_client.rs  advisor.rs  agent.rs  agent_acp.rs  agent_dir.rs  agent_opencode.rs  compose.rs  config.rs  devcontainer.rs  forge.rs  git.rs  init.rs  main.rs  mcp.rs  pod.rs  pod_api.rs  podman.rs  prompt.rs  review_tui.rs  secrets.rs  service_gator.rs  ssh_server.rs  tui.rs  web.rs  web_terminal.rs
src/static/: agent-wrapper.js
