[workspace]
members = [".", "crates/integration-tests"]
resolver = "2"

[package]
name = "devaipod"
version = "0.1.0"
edition = "2021"
description = "Sandboxed AI coding agents in reproducible dev environments"
repository = "https://github.com/cgwalters/devaipod"
readme = "README.md"
keywords = ["devcontainer", "ai", "agents", "devpod", "containers"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
bollard = "0.18"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
color-eyre = "0.6"
futures-util = "0.3"
notify = "7"
rand = "0.9.2"
rustix = { version = "1.1.3", features = ["process"] }
cap-std-ext = "5"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
shell-words = "1"
serde_json = "1"
serde_yaml = "0.9"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "io-std", "time", "sync", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
url = "2"
urlencoding = "2"
reqwest = { version = "0.13", features = ["json"] }
jsonc-parser = { version = "0.29.0", features = ["serde"] }
jsonwebtoken = "9"
dialoguer = "0.11"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Web UI server
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# SSH server for remote development (VSCode/Zed integration)
russh = { version = "0.57", features = ["aws-lc-rs"] }
russh-sftp = "2.1"
async-stream = "0.3"
async-trait = "0.1"
pin-project = "1"
tokio-stream = "0.1.18"

[dev-dependencies]
insta = "1"
rstest = "0.24"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"
