[package]
name = "devaipod-host"
version = "0.1.0"
edition = "2024"
description = "Thin host-side shim that proxies devaipod commands into the container"
license = "MIT OR Apache-2.0"

[[bin]]
name = "devaipod"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
