[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Disable automatic binary discovery to avoid conflicts with test target
autobins = false

[[test]]
name = "integration-tests"
path = "src/main.rs"
harness = false

[dependencies]
cap-std-ext = "5"
color-eyre = "0.6"
libtest-mimic = "0.7.3"
linkme = "0.3.30"
paste = "1.0"
rustix = { version = "1.1.3", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
tracing = "0.1"
urlencoding = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xshell = "0.2"

[lints.rust]
unsafe_code = "allow"  # Required for linkme
missing_docs = "allow"  # Test code
